    - res/img/icons/dmg: add new image disk.svg, used as the basis for the new
      OS X DMG bundle icon.
    - res/img/icons/dmg: add new disk-drive-and-x2goclient icon for use as the
      volume icon of the OS X DMG bundle.
    - macbuild.sh: use the new volume icon that actually also looks like a
      disk drive. Fixes: #930.
    - src/onmainwindow.cpp: typo fix only.

  [ Oleksandr Shneyder ]
  * New upstream version (4.1.0.1):
    - Add "direct XDMCP" functionality.
    - Disable sound button on direct RDP and XDMCP sessions.
      Set for direct XDMCP session autologin=true.
      Set for direct XDMCP session username=XDM.

  [ Robert Parts ]
  * New upstream version (4.1.0.1):
    - res/i18n/x2goclient_et.ts: update Estonian translation file.

  [ Martti Pitkänen ]
  * New upstream version (4.1.0.1):
    - res/i18n/x2goclient_fi.ts: update Finnish translation file.

  [ Mike DePaulo ]
  * New upstream version (4.1.0.1):
    - Windows: Upgrade PulseAudio from 6.0 to 7.1
      Fixes: #1152 Issues with audio when playing HTML5 videos
    - Windows: Remove uninstaller from start menu.
      It is still available in "Programs and Features".
    - Windows: Upgrade Win32 OpenSSL from 1.0.1t to 1.0.2k
      Fixes numerous CVEs
    - Windows: Upgrade libssh from 0.7.0 to 0.7.4 (while maintaining
      Pageant support).
      The possibly relevant changes are:
        + CVE-2016-0739 was fixed
        + improved id_ed25519 support
        + numerous bug fixes
    - Windows: Update PuTTY from 0.67 to 0.68
      The possibly relevant changes are:
        + CVE-2016-6167 was fixed (did not affect X2Go Client by
          default because the installation dir is not writeable by
          users)
        + CVE-2017-6542 was fixed
    - Don't override PATH for the actual session or application
      command.
      Fixes: #1100

  [ Seth Galitzer ]
  * New upstream version (4.1.0.1):
    - src/help.cpp: add documentation for the --background option.
      Part of #1162.